--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
       "icon": "build/assets/icons/256x256.ico"
     },
     "linux": {
-      "target": ["deb"],
+      "target": ["deb", "snap"],
       "category": "AudioVideo",
       "icon": "build/assets/icons/"
     },
