Auto stash before rebase of "origin/master"
small change

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     },
     "deb": {
       "compression": "gz",
-      "icon": "./build/assets/icons/256x256.png"
+      "icon": "build/assets/icons/256x256.png"
     }
   }
 }
